force-app/main/default/objects/User_History_Field_Definition__e/User_History_Field_Definition__e.object-meta.xml
<CustomObject>
    <description>Serves as a means to create a User History record and prevent getting mixed DML errors when using record triggered automation with User.</description>
    <label>User History Field Definition</label>
    <pluralLabel>User History Field Definitions</pluralLabel>
</CustomObject>