force-app/main/default/objects/User_History_Field_Definition__e/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <description>The Id of the User who made the change.</description>
    <label>Changed By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>