force-app/main/default/objects/User_History_Field_Definition__e/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>The field name of the field that was changed.</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>