force-app/main/default/objects/User_History_Field_Definition__e/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>The new value of the field that was changed.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>