force-app/main/default/objects/User_History_Field_Definition__e/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>The old value of the field that was changed.</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>