force-app/main/default/objects/User_History_Field_Definition__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>The Id of the User that was changed.</description>
    <label>UserId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>